Initial commit with website files

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "GreenBasket",
     "displayname": "GreenBasket",
-    "slug": "Greenbasket",
+    "slug": "GreenBasket",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/apps/image.png",
@@ -25,7 +25,8 @@
           "apiKey": "AIzaSyCCUF7-eDY44q5ThMdAFiydxXegf7cam5E",
           "certificateHash": "5D:51:69:09:FA:A3:FC:53:E0:3D:9F:46:73:7B:64:9B:C0:4A:37:07"
         }
-      }
+      },
+      "package": "com.cuyzl.Greenbasket"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -34,6 +35,7 @@
       "eas": {
         "projectId": "14c3497f-0fff-4d6b-bccc-ba4f20199a4a"
       }
-    }
+    },
+    "scheme": "greenbasket"
   }
 }
