--- a/eas.json
+++ b/eas.json
@@ -5,7 +5,9 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
     },
     "preview": {
       "distribution": "internal"
@@ -15,4 +17,5 @@
   "submit": {
     "production": {}
   }
+}
 }
