--- a/package.json
+++ b/package.json
@@ -1,37 +1,54 @@
 {
   "name": "greenbasket",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
+  "main": "index.js",
   "dependencies": {
-    "@react-native-google-signin/google-signin": "^12.2.1",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
-    "expo": "^51.0.28",
-    "expo-auth-session": "~5.5.2",
-    "expo-random": "~14.0.1",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "undefined": "expo-auth-session/providers/google",
-    "expo-crypto": "~13.0.2"
+    "accepts": "^1.3.8",
+    "ajv": "^8.11.0",
+    "ansi-styles": "^3.2.1",
+    "async": "^3.2.6",
+    "axios": "^0.27.2",
+    "babel-preset-expo": "^9.1.0",
+    "body-parser": "^1.19.0",
+    "chalk": "^2.4.2",
+    "commander": "^7.2.0",
+    "compression": "^1.7.4",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "errorhandler": "^1.5.1",
+    "expo": "^45.0.8",
+    "expo-application": "^4.1.0",
+    "expo-asset": "^8.5.0",
+    "expo-auth-session": "^5.5.2",
+    "expo-constants": "^13.1.1",
+    "expo-dev-client": "^4.0.26",
+    "expo-file-system": "^14.0.0",
+    "expo-font": "^10.1.0",
+    "expo-status-bar": "^1.3.0",
+    "express": "^4.18.2",
+    "fast-glob": "^3.2.11",
+    "fs-extra": "^10.0.1",
+    "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "metro": "^0.80.12",
+    "mime-types": "^2.1.35",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.70.0",
+    "react-native-web": "^0.18.10",
+    "uuid": "^9.0.0"
   },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/plugin-transform-class-properties": "^7.24.7",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
-    "@babel/plugin-transform-object-rest-spread": "^7.24.7",
-    "@babel/plugin-transform-optional-chaining": "^7.24.8",
-    "glob": "^11.0.0",
-    "querystring": "^0.2.1",
-    "rimraf": "^6.0.1"
+  "devDependencies": {},
+    "scripts": {
+    "start": "expo start", 
+    "android": "expo start --android",
+    "ios": "expo start --ios", 
+    "web": "expo start --web",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
