--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "babel-preset-expo": "~11.0.0",
     "expo": "^51.0.32",
@@ -12,8 +13,8 @@
     "expo-status-bar": "^1.3.0",
     "react": "^18.2.0",
     "react-native": "^0.74.5",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1"
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0"
   },
   "scripts": {
     "start": "expo start",
